--- a/app/views/sports/index.slim
+++ b/app/views/sports/index.slim
@@ -9,4 +9,4 @@ section#parallax-football
               .message-body
                 h4.subtitle = link_to championship.name, sport_championship_path(championship.id, sport_id: sport.id)
                 - championship.seasons.each do |season|
-                  = link_to season.name, sport_championship_season_days_path(season_id: season.id, championship_id: championship.id, sport_id: sport.id), class: "button is-link is-outlined"
+                  = link_to season.name, sport_championship_season_days_path(season_id: season.id, championship_id: championship.id, sport_id: sport.id), class: "button is-#{season.active ? 'primary' : 'link is-outlined'}"
