--- a/app/views/days/index.slim
+++ b/app/views/days/index.slim
@@ -40,36 +40,37 @@ section#parallax-football
   .hero-body
     .container
       .columns
-        table.table.has-text-white.is-bordered
-          tr
-            th Дата
-            th 1
-            th 2
-            th 3
-            th 4
-            th Игроков
-            th Игр
-          - @days.each do |day|
+        .table-container
+          table.table.has-text-white.is-bordered
             tr
-              - g = day.games.to_a
-              td = link_to l(day.date), sport_championship_season_day_path(day.id, season_id: day.season.id, championship_id: day.season.championship.id, sport_id: day.season.championship.sport.id)
-              / td = link_to day.date.strftime('%d.%m.%Y %A'), day_path(day)
-              - array = [day.first_place, day.second_place, day.third_place]
-              - array.each do |place|
+              th Дата
+              th 1
+              th 2
+              th 3
+              th 4
+              th Игроков
+              th Игр
+            - @days.each do |day|
+              tr
+                - g = day.games.to_a
+                td = link_to l(day.date), sport_championship_season_day_path(day.id, season_id: day.season.id, championship_id: day.season.championship.id, sport_id: day.season.championship.sport.id)
+                / td = link_to day.date.strftime('%d.%m.%Y %A'), day_path(day)
+                - array = [day.first_place, day.second_place, day.third_place]
+                - array.each do |place|
+                  td
+                    - if place.present?
+                      = image_tag "colors/#{Team.cached_by_id[place].code}.png", size: '20x25'
+                      | &nbsp;
+                      = g.select { |x| x.team_left_id == place || x.team_right_id == place }.count
+                - dp = day.day_players_by_season(day.season_id)
                 td
-                  - if place.present?
-                    = image_tag "colors/#{Team.cached_by_id[place].code}.png", size: '20x25'
-                    | &nbsp;
-                    = g.select { |x| x.team_left_id == place || x.team_right_id == place }.count
-              - dp = day.day_players_by_season(day.season_id)
-              td
-                - if dp.group_by(&:team_id).count > 3
-                  - (@teams.pluck(:id) - array).each do |t|
-                    = image_tag "colors/#{Team.cached_by_id[t].code}.png", size: '20x25'
-                    | &nbsp;
-                    = g.select { |x| x.team_left_id == t || x.team_right_id == t }.count
-              td = dp.count
-              td = g.size
+                  - if dp.group_by(&:team_id).count > 3
+                    - (@teams.pluck(:id) - array).each do |t|
+                      = image_tag "colors/#{Team.cached_by_id[t].code}.png", size: '20x25'
+                      | &nbsp;
+                      = g.select { |x| x.team_left_id == t || x.team_right_id == t }.count
+                td = dp.count
+                td = g.size
 
 section#parallax-cars
   .hero-body
