--- a/app/views/days/show.slim
+++ b/app/views/days/show.slim
@@ -1,2 +1,137 @@
-/ if request.user_agent =~ /Mobile|webOS/
-= render 'show_desktop'
+section id="parallax-#{@day.season.championship.code}"
+  .hero-body
+    .container
+      .columns.is-mobile
+        .column.is-3.is-right
+          - if @day.id != @day.season.days.first.id
+            = link_to sport_championship_season_day_path(@day.id - 1, to: -1, season_id: @day.season.id, championship_id: @day.season.championship.id, sport_id: @day.season.championship.sport.id) do
+              = image_tag 'left.png', size: '100x100'
+        .column.is-6.is-center
+          h2.subtitle.is-1 = l(@day.date)
+        .column.is-3.is-left
+          - if @day.id != @day.season.days.last.id
+            = link_to sport_championship_season_day_path(@day.id + 1, to: 1, season_id: @day.season.id, championship_id: @day.season.championship.id, sport_id: @day.season.championship.sport.id) do
+              = image_tag 'right.png', size: '100x100'
+    .container
+      .row
+        .table-container
+          table.table.has-text-white.is-bordered
+            tr
+              th Команда
+              th.text-center Матчи
+              th.text-center Победа
+              th.text-center Ничья
+              th.text-center Поражение
+              th.text-center Голов
+              th.text-center points per game
+            - @main_table.each do |table|
+              - next if table[:games_count].zero?
+              tr data-link='' data-toggle='modal' data-target="#gamesModalCenter_#{table[:team_code]}"
+                td.text-center = image_tag "colors/#{table[:team_code]}.png", size: '25x30'
+                td.text-center = table[:games_count]
+                td.text-center
+                  = table[:win_count]
+                  .small
+                    - if table[:opps_win]
+                      - table[:opps_win].sort.reverse.each do |code, count|
+                        div
+                          - count.count.times do
+                            = image_tag "colors/#{code}.png", size: '10x15'
+                            | &nbsp;
+                td.text-center
+                  = table[:draw_count]
+                  .small
+                    - if table[:opps_draw]
+                      - table[:opps_draw].sort.reverse.each do |code, count|
+                        div
+                          - count.count.times do
+                            = image_tag "colors/#{code}.png", size: '10x15'
+                            | &nbsp;
+                td.text-center
+                  = table[:lose_count]
+                  .small
+                    - if table[:opps_lose]
+                      - table[:opps_lose].sort.reverse.each do |code, count|
+                        div
+                          - count.count.times do
+                            = image_tag "colors/#{code}.png", size: '10x15'
+                            | &nbsp;
+                td.text-center = table[:goals]
+                td.text-center = table[:ppg]
+              .modal.fade aria-hidden="true" role="dialog" tabindex="-1" id="gamesModalCenter_#{table[:team_code]}"
+                .modal-dialog.modal-dialog-centered role="document"
+                  .modal-content.text-black-50
+                    .modal-header
+                      h5.modal-title Сыгранные игры
+                      button.close aria-label="Close" data-dismiss="modal" type="button"
+                        span aria-hidden="true"  &times;
+                    .modal-body
+                      - {opps_win: 'Победы', opps_draw: 'Ничьи', opps_lose: 'Поражения'}.each do |key, value|
+                        - next if table[key].nil? || table[key].count.zero?
+                        .row
+                          .col-sm-3
+                            | #{value}:
+                          - table[key].each do |code, count|
+                            .col-sm-3
+                              = "#{count.count} x "
+                              = image_tag "colors/#{code}.png", size: '25x30'
+
+section#parallax-football
+  .hero-body
+    .container
+      - if request.user_agent =~ /Mobile|webOS/
+        - @day.day_players_by_season(@day.season_id).group_by(&:team_id).sort.each do |team_id, day_players|
+          = render 'teams', team_id: team_id, day_players: day_players
+      - else
+        - @day.day_players_by_season(@day.season_id).group_by(&:team_id).sort.each do |team_id, day_players|
+          .columns.is-centered
+            .column.has-text-centered class="footballka-#{Team.cached_by_id[team_id].code}"
+              .columns.is-mobile
+                .column.is-4.has-text-centered
+                .column.is-4.has-text-centered
+                  = render 'teams', team_id: team_id, day_players: day_players
+                .column.is-4.has-text-centered
+
+section#parallax-computers
+  .hero-body
+    .container
+      .columns.is-centered
+        .column.is-6
+          .table-container
+            table.table.has-text-white.table-dark.table-striped.table-bordered
+              tr
+                th colspan="8" Игры
+              - @games.each_with_index do |game, i|
+                - z = game.goals.map(&:player_id).map do |player_id|
+                  - next unless player_id
+                  - @players.find { |pl| pl.id == player_id }.name
+                tr
+                  td.text-left
+                    = i + 1
+                  td.text-right
+                    sup class="#{game.rated_class('left')}"
+                      = game.rated('left')
+                    = game.left_team_elo.to_i
+                  td.text-left
+                    - t = @teams.find { |t| t.id == game['team_left_id'] }
+                    = image_tag "colors/#{t.code}.png", size: "25x30"
+                  td.text-center.CellWithComment
+                    = "#{game.goals_left} : #{game.goals_right}"
+                    span.CellComment = z.compact.join(', ')
+                  td.text-right
+                    - t = @teams.find { |t| t.id == game['team_right_id'] }
+                    = image_tag "colors/#{t.code}.png", size: "25x30"
+                  td.text-left
+                    = game.right_team_elo.to_i
+                    sup class="#{game.rated_class('right')}"
+                      = game.rated('right')
+
+section#parallax-cars
+  .hero-body
+    .container
+      - if @day && @day.videos
+        - @day.videos.split(",").each_slice(3) do |videos|
+          .columns
+            - videos.each do |link|
+              .column.is-4
+                iframe.embed-responsive-item src="https://www.youtube.com/embed/#{link}" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"
