--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -2,7 +2,7 @@ footer.footer
   .content.has-text-centered
     p &nbsp
     p
-      | football.krsz.ru
+      | football.pipiper.ru
       | &nbsp
       | by
       | &nbsp
