--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -9,17 +9,17 @@ html
 
     title Megapolis football site
     meta charset="utf-8"
-    link href="https://football.krsz.ru" rel="canonical"
+    link href="https://football.pipiper.ru" rel="canonical"
     meta name="yandex-verification" content="b8209de9862994b1"
     meta name="viewport"            content="width=device-width,initial-scale=1"
-    meta name="description"         content="football.krsz.ru"
+    meta name="description"         content="football.pipiper.ru"
     meta name="twitter:card"        content="summary_large_image"
-    meta property="og:url"          content="https://football.krsz.ru/"
-    meta property="og:site_name"    content="football.krsz.ru"
+    meta property="og:url"          content="https://football.pipiper.ru/"
+    meta property="og:site_name"    content="football.pipiper.ru"
     meta property="og:type"         content="website"
-    meta property="og:title"        content="football.krsz.ru"
+    meta property="og:title"        content="football.pipiper.ru"
     meta property="og:locale"       content="ru_RU"
-    meta property="og:description"  content="football.krsz.ru"
+    meta property="og:description"  content="football.pipiper.ru"
     meta property="og:image"        content="#{asset_path('og-image.png')}"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     link rel="canonical"  href="https://#{ENV['HOST']}"
