--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -3,7 +3,7 @@ section.hero.is-lower-alpha
   .hero-body
     .container
       h1.title.is-1
-        | football.krsz.ru
+        | football.pipiper.ru
       h2.subtitle
         a href="" статистика спортивных мероприятий
       - unless current_player
