--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -7,7 +7,7 @@ div.event-details {
 }
 
 #pole {
-  background: #000000 url(images/pole.jpg) no-repeat center center;
+  background: #000000 url(images/megapolis.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size:    cover;
   -o-background-size:      cover;
