--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -39,7 +39,7 @@ $grey-light: $beige-light;
 // @import "bulma/sass/layout/section.sass";
 
 @import 'bulma/bulma';
-//@import 'bulma-extensions/bulma-switch/src/sass/index';
+@import 'bulma-extensions/bulma-switch/src/sass/index';
 @import "./players";
 @import "./parallax";
 @import "./custom";
