--- a/app/views/days/_players.slim
+++ b/app/views/days/_players.slim
@@ -12,7 +12,7 @@
           | &nbsp;
           = count
     td.text-right = player.games
-    td.text-right = player.stats_elo.to_i
+    td.text-right = player.new_elo.to_i
     td.text-right = player.goals_count
     td.text-right = player.assists_count
     td.text-right
