--- a/app/views/days/show.slim
+++ b/app/views/days/show.slim
@@ -24,6 +24,8 @@ section id="parallax-#{@day.season.championship.code}"
               th.text-center Поражение
               th.text-center Голов
               th.text-center points per game
+              th.text-center elo
+              th.text-center players
             - @main_table.each do |table|
               - next if table[:games_count].zero?
               tr data-link='' data-toggle='modal' data-target="#gamesModalCenter_#{table[:team_code]}"
@@ -58,6 +60,20 @@ section id="parallax-#{@day.season.championship.code}"
                             | &nbsp;
                 td.text-center = table[:goals]
                 td.text-center = table[:ppg]
+                td.text-center = table[:elo]
+                td.text-center
+                  - table[:day_players].sort_by(&:elo).reverse.each do |day_player|
+                    - player = @players.find { |p| p[:id] == day_player.player_id }
+                    div
+                      = link_to "#{day_player.elo.to_i} #{player.full_name} ", player_path(player), class: 'has-text-white'
+                      - if @player_goals[player.code]
+                        - @player_goals[player.code].times do
+                          | ⚽️
+                      - if @player_assists[player.code]
+                        - @player_assists[player.code].times do
+                          | 🦶
+
+
               .modal.fade aria-hidden="true" role="dialog" tabindex="-1" id="gamesModalCenter_#{table[:team_code]}"
                 .modal-dialog.modal-dialog-centered role="document"
                   .modal-content.text-black-50
@@ -79,11 +95,10 @@ section id="parallax-#{@day.season.championship.code}"
 section#parallax-football
   .hero-body
     .container
-      - if request.user_agent =~ /Mobile|webOS/
-        - @day.day_players_by_season(@day.season_id).group_by(&:team_id).sort.each do |team_id, day_players|
+      - @day.day_players_by_season(@day.season_id).group_by(&:team_id).sort.each do |team_id, day_players|
+        - if request.user_agent =~ /Mobile|webOS/
           = render 'teams', team_id: team_id, day_players: day_players
-      - else
-        - @day.day_players_by_season(@day.season_id).group_by(&:team_id).sort.each do |team_id, day_players|
+        - else
           .columns.is-centered
             .column.has-text-centered class="footballka-#{Team.cached_by_id[team_id].code}"
               .columns.is-mobile
