--- a/app/views/players/show.slim
+++ b/app/views/players/show.slim
@@ -17,7 +17,7 @@ section#parallax-football
                 label.label Номер
                 .control
                   = text_field_tag '', @player.code, class: 'input is-medium', disabled: true
-              - @player.stats.where(season_id: Season.where(active: true)).each do |stat|
+              - @player.day_players.where(season_id: Season.where(active: true)).each do |stat|
                 .field
                   label.label = "ELO: (#{stat.season_id})"
                   .control
@@ -66,4 +66,6 @@ section#parallax-computers
         /         div= "#{Team.color(vs[:team_id])} +#{vs[:win]} =#{vs[:draw]} -#{vs[:lose]}"
         .columns.is-mobile
           .column.is-12
-            = area_chart rates.map { |dp| [dp.day_id, dp.elo.to_i] }, width: "93%", min: 800, max: 2800, xmin: rates.first.day_id, download: {background: "#ffffff"}, dataset: {borderWidth: 3}
+            - min, max = [800, 2000]
+            - min, max = [0, 1200] if season_id >= 8
+            = area_chart rates.map { |dp| [dp.day_id, dp.new_elo.to_i] }, width: "93%", min: min, max: max, xmin: rates.first.day_id, download: {background: "#ffffff"}, dataset: {borderWidth: 3}
