--- a/app/views/days/show.slim
+++ b/app/views/days/show.slim
@@ -26,7 +26,7 @@ section id="parallax-#{@day.season.championship.code}"
               th.text-center points per game
               th.text-center elo
               th.text-center players
-            - @main_table.each do |table|
+            - @main_table.sort_by { |x| x[:ppg] }.reverse.each do |table|
               - next if table[:games_count].zero?
               tr data-link='' data-toggle='modal' data-target="#gamesModalCenter_#{table[:team_code]}"
                 td.text-center = image_tag "colors/#{table[:team_code]}.png", size: '25x30'
